force-app/main/default/objects/Handoff__c/Handoff__c.object-meta.xml
<CustomObject>
    <label>Handoff</label>
    <nameField>
        <displayFormat>HND-{0000}</displayFormat>
        <label>Handoff Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Handoffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>