force-app/main/default/objects/Handoff__c/fields/Amperage__c.field-meta.xml
<CustomField>
    <fullName>Amperage__c</fullName>
    <label>Amperage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>