force-app/main/default/objects/Handoff__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>