force-app/main/default/objects/Handoff__c/fields/Connector_Type__c.field-meta.xml
<CustomField>
    <fullName>Connector_Type__c</fullName>
    <label>Connector Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>