force-app/main/default/objects/Handoff__c/fields/Customer_Intent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Intent__c</fullName>
    <label>Customer Intent</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>