force-app/main/default/objects/Handoff__c/fields/Enclosure__c.field-meta.xml
<CustomField>
    <fullName>Enclosure__c</fullName>
    <label>Enclosure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>