force-app/main/default/objects/Handoff__c/fields/Peer_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review_Notes__c</fullName>
    <label>Peer Review Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>