force-app/main/default/objects/Handoff__c/fields/Peer_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review_Status__c</fullName>
    <label>Peer Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>