force-app/main/default/objects/Handoff__c/fields/Product_Lines__c.field-meta.xml
<CustomField>
    <fullName>Product_Lines__c</fullName>
    <label>Product Lines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>