force-app/main/default/objects/Handoff__c/fields/Sales_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Notes__c</fullName>
    <label>Sales Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>