force-app/main/default/objects/Handoff__c/fields/Site_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Site_Conditions__c</fullName>
    <label>Site Conditions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>