force-app/main/default/objects/Handoff__c/fields/Voltage__c.field-meta.xml
<CustomField>
    <fullName>Voltage__c</fullName>
    <label>Voltage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>